# mtg-auction-scraper

./: README.md  pyproject.toml
config/: currency_conversion.csv  grade.csv
src/: get_auctions_danskmagic.py  get_prices.py  plot_prices.py  plot_prices_sum.py
