[tool.poetry]
name = "mtg-trade"
version = "0.1.0"
description = ""
authors = ["Jon Thompson <jjt@tutanota.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
ipykernel = "^5.5.5"
pandas = "^1.2.4"
altair = "^4.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
